--- a/news-list.html
+++ b/news-list.html
@@ -5,8 +5,8 @@
 <title>Title</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> -->
-<meta name="viewport" content="width=1280" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<!-- <meta name="viewport" content="width=1280" /> -->
 </head>
 <body class="page">
 	<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -85,6 +85,34 @@
 		<li class="menu__item"><a href="#">Контакты</a></li>
 	</ul>
 </nav>
+		</div>
+		<div class="header__mobile mobile">
+			<div class="mobile__menu">
+				<div class="mobile__menu">
+					<button class="mobile__menu-btn"></button>
+					<div class="mobile__menu-drop">
+						<ul class="menu">
+							<li class="menu__item"><a href="#">О компании</a></li>
+							<li class="menu__item"><a href="#">Наше производство</a></li>
+							<li class="menu__item"><a href="#">Продукция</a></li>
+							<li class="menu__item"><a href="#">Новости</a></li>
+							<li class="menu__item"><a href="#">Закупки</a></li>
+							<li class="menu__item"><a href="#">Вакансии</a></li>
+							<li class="menu__item"><a href="#">Контакты</a></li>
+						</ul>
+						<a href="tel:88007752121" class="mobile__tel">8 800 775-21-21</a>
+					</div>
+				</div>
+				<div class="mobile__logo">
+					<img src="img/logo_m.png" alt="">
+				</div>
+				<div class="mobile__search">
+					<button class="mobile__search-btn"></button>
+					<div class="mobile__search-field">
+						<input type="search" placeholder="Найти...">
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </header>
@@ -169,8 +197,51 @@
 			</a>
 		</div>
 	</li>
+	<li class="news__item">
+		<div class="news__item-img" style="background-image: url('img/content/news.jpg')"></div>
+		<div class="news__item-wrap">
+			<span class="news__item-date date">25 мая 2017</span>
+			<a href="#" class="news__item-title">
+				Алтайский «Холод» начал производство сухого молока в упаковке для розницы
+			</a>
+		</div>
+	</li>
+	<li class="news__item">
+		<div class="news__item-img" style="background-image: url('img/content/news.jpg')"></div>
+		<div class="news__item-wrap">
+			<span class="news__item-date date">25 мая 2017</span>
+			<a href="#" class="news__item-title">
+				Алтайский «Холод» начал производство сухого молока в упаковке для розницы
+			</a>
+		</div>
+	</li>
 </ul>
 				</div>
+				<div class="paginator">
+	<ul class="paginator__pages">
+		<li class="paginator__page">
+			<a href="#">1</a>
+		</li>
+		<li class="paginator__page paginator__page_current">
+			<a href="#">2</a>
+		</li>
+		<li class="paginator__page">
+			<a href="#">3</a>
+		</li>
+		<li class="paginator__page">
+			<a href="#">4</a>
+		</li>
+		<li class="paginator__page">
+			<a href="#">5</a>
+		</li>
+		<li class="paginator__page">
+			<a href="#">6</a>
+		</li>
+		<li class="paginator__page paginator__page_prevnext">
+			<a href="#">Следующая</a>
+		</li>
+	</ul>
+</div>
 			</section>
 		</div>
 	</div>
