--- a/text-page.html
+++ b/text-page.html
@@ -116,201 +116,68 @@
 		</div>
 	</div>
 </header>
-	<div class="container">
-		<div class="slider">
-	<ul class="slider__slides">
-		<li class="slide">
-			<div class="slide__bg" style="background-image: url(img/content/slider.jpg)"></div>
-			<div class="slide__text">
-				<p>Сыр «Легенда Алтая» – многократный призер выставок и ярмарок</p>
-			</div>
-		</li>
-		<li class="slide">
-			<div class="slide__bg" style="background-image: url(img/content/slider.jpg)"></div>
-			<div class="slide__text">
-				<p>Сыр «Легенда Алтая» – многократный призер выставок и ярмарок</p>
-			</div>
-		</li>
-	</ul>
-</div>
-		<div class="group">
-			<h1>Группа компаний<strong>«Холод»</strong></h1>
-			<ul class="medals">
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-				<li class="medals__item"><img src="img/content/medal.png" alt=""></li>
-			</ul>
-		</div>
+
+	<div class="breadcrumbs">
+		<ul class="breadcrumbs__tree">
+			<li class="breadcrumbs__item">
+				<a href="/">
+					<img src="img/icons/home.png" alt="Главная">
+				</a>
+			</li>
+			<li class="breadcrumbs__item">
+				<a href="#">
+					Образец текстовой страницы
+				</a>
+			</li>
+		</ul>
 	</div>
-	
+
 	<div class="wrapper">
 		<div class="container">
-			<section class="section about">
-	<div class="about__text">
-		<p>
-			Ведущее молокоперерабатывающее объединение не только Алтайского края, но и всей Западной Сибири, серьезный и надежный партнер сельхозпроизводителей.<br>
-			Основной упор в производстве продукции под торговой маркой «Белый замок» делается на качество и натуральность продукта.<br>
-			Специализация компании – сыры сычужные и плавленые, масло, цельномолочная продукция, в том числе широкий ассортимент кисломолочных продуктов, сметаны, творога и творожные изделия, сыворотка и др.
-		</p>
-	</div>
-	<ul class="about__blocks">
-	<li class="f-block">
-		<div class="f-block__img">
-			<img src="img/about/boxes.png" alt="">
-		</div>
-		<span class="f-block__val"><strong>845 000</strong></span>
-		<p class="f-block__txt">
-			тонн продукции в год *
-		</p>
-	</li>
-	<li class="f-block">
-		<div class="f-block__img">
-			<img src="img/about/clock.png" alt="">
-		</div>
-		<span class="f-block__val"><strong>1980</strong> г.</span>
-		<p class="f-block__txt">
-			контроль качества с прошлого столетия
-		</p>
-	</li>
-	<li class="f-block">
-		<div class="f-block__img">
-			<img src="img/about/flags.png" alt="">
-		</div>
-		<span class="f-block__val">> <strong>2500</strong></span>
-		<p class="f-block__txt">
-			точек продаж
-		</p>
-	</li>
-	<li class="f-block">
-		<div class="f-block__img">
-			<img src="img/about/chart.png" alt="">
-		</div>
-		<span class="f-block__val">+ <strong>10,3</strong> %</span>
-		<p class="f-block__txt">
-			рост производства *
-		</p>
-	</li>
-</ul>
-	<button class="btn">О компании</button>
-</section>
-			<section class="section">
-	<h2 class="section__title title"><span>Продукция</span></h2>
-	<ul class="catalog">
-		<li class="catalog__item" style="background-image: url('img/catalog/milk.jpg')">
-			<a href="#">
-				<div class="catalog__item-title">
-					<span>Цельномолочная продукция</span>
+			<section class="section section_page">
+				<h2 class="title title_page">Образец текстовой страницы</h2>
+				<div class="section__content section__content_page">
+					<p>
+						Молокоперерабатывающий комбинат «Холод» в Алтайском крае начал выпускать сухое цельное молоко в упаковке для розницы, сообщает сайт Управления Алтайского края по пищевой, перерабатывающей, фармацевтической промышленности и биотехнологиям. Это первый подобный товар среди производителей сухого молока региона.
+					</p>
+					<p>
+						Предприятие выбрало для розничной торговли так называемый европейский пластиковый стакан объемом 200 г. В нем с этого месяца продается сухое цельное молоко 26% жирности под брендом «Белый замок».
+					</p>
+					<p>
+						Сухое молоко в Алтайском крае выпускают только два предприятия – ООО «Холод» и ООО «Кулундаконсервмолоко». Вместе они за прошлый год сделали 5,647 тыс. т сухого молоко. Все этого было предназначено для оптовых покупателей, так как до июля этого года местные производители не делали сухое молоко для розницы.
+					</p>
+					<p>
+						Завод ООО «Холод» находится в городе Заринске Алтайского края и производит молочную продукцию под брендом «Белый замок». Предприятие производит сыры, масло, творог, сметану и другие товары из молока.
+					</p>
+					<img src="img/content/textpage.jpg" alt="">
+					<p>
+						Молокоперерабатывающий комбинат «Холод» в Алтайском крае начал выпускать сухое цельное молоко в упаковке для розницы, сообщает сайт Управления Алтайского края по пищевой, перерабатывающей, фармацевтической промышленности и биотехнологиям. Это первый подобный товар среди производителей сухого молока региона.
+					</p>
+					<p>
+						Предприятие выбрало для розничной торговли так называемый европейский пластиковый стакан объемом 200 г. В нем с этого месяца продается сухое цельное молоко 26% жирности под брендом «Белый замок».
+					</p>
+					<ul class="list">
+						<li>Душа моя озарена неземной радостью</li>
+						<li>Я так счастлив, мой друг</li>
+						<li>Когда от милой моей долины поднимается пар </li>
+					</ul>
+					<p>
+						Сухое молоко в Алтайском крае выпускают только два предприятия – ООО «Холод» и ООО «Кулундаконсервмолоко». Вместе они за прошлый год сделали 5,647 тыс. т сухого молоко. Все этого было предназначено для оптовых покупателей, так как до июля этого года местные производители не делали сухое молоко для розницы.
+					</p>
+					<p>
+						Завод ООО «Холод» находится в городе Заринске Алтайского края и производит молочную продукцию под брендом «Белый замок». Предприятие производит сыры, масло, творог, сметану и другие товары из молока.
+					</p>
+					<ul class="list list_order">
+						<li>Список 1</li>
+						<li>Список 2</li>
+						<li>Список 3</li>
+					</ul>
+					<div class="quote">
+						<p>Душа моя озарена неземной радостью, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца. Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я.</p>
+						<span>– Иван Иванов</span>
+					</div>
 				</div>
-			</a>
-		</li>
-		<li class="catalog__item" style="background-image: url('img/catalog/milk.jpg')">
-			<a href="#">
-				<div class="catalog__item-title">
-					<span>Сыры, масло, сыворотка</span>
-				</div>
-			</a>
-		</li>
-		<li class="catalog__item" style="background-image: url('img/catalog/milk.jpg')">
-			<a href="#">
-				<div class="catalog__item-title">
-					<span>Растениеводческая продукция</span>
-				</div>
-			</a>
-		</li>
-	</ul>
-</section>	
-			<section class="section">
-	<h2 class="section__title title"><span>Новости</span></h2>
-	<ul class="news">
-		<li class="news__item news__item_index">
-			<div class="news__item-img" style="background-image: url('img/content/news.jpg')"></div>
-			<div class="news__item-wrap">
-				<span class="news__item-date date">25 мая 2017</span>
-				<a href="#" class="news__item-title">
-					Алтайский «Холод» начал производство сухого молока в упаковке для розницы
-				</a>
-			</div>
-		</li>
-		<li class="news__item news__item_index">
-			<div class="news__item-img" style="background-image: url('img/content/news.jpg')"></div>
-			<div class="news__item-wrap">
-				<span class="news__item-date date">25 мая 2017</span>
-				<a href="#" class="news__item-title">
-					Алтайский «Холод» начал производство сухого молока в упаковке для розницы
-				</a>
-			</div>
-		</li>
-		<li class="news__item news__item_index">
-			<div class="news__item-img" style="background-image: url('img/content/news.jpg')"></div>
-			<div class="news__item-wrap">
-				<span class="news__item-date date">25 мая 2017</span>
-				<a href="#" class="news__item-title">
-					Алтайский «Холод» начал производство сухого молока в упаковке для розницы
-				</a>
-			</div>
-		</li>
-		<li class="news__item news__item_index">
-			<div class="news__item-img" style="background-image: url('img/content/news.jpg')"></div>
-			<div class="news__item-wrap">
-				<span class="news__item-date date">25 мая 2017</span>
-				<a href="#" class="news__item-title">
-					Алтайский «Холод» начал производство сухого молока в упаковке для розницы
-				</a>
-			</div>
-		</li>
-	</ul>
-	<button class="btn">Все новости</button>
-</section>
-			<section class="section">
-	<div class="interview">
-		<div class="interview__cell">
-			<div class="interview__img" style="background-image: url('img/content/interview.jpg')"></div>
-		</div>
-		<div class="interview__cell">
-			<div class="interview__body">
-				<h2 class="title"><span>Опрос</span></h2>
-				<form class="interview__quest form">
-					<p>Что для вас наиболее важно в молочной продукции?</p>
-					<label class="form__line radio">
-						<input type="radio" name="interview">
-						<span class="radio__box"></span>
-						<span>Вкусовые качества</span>
-					</label>
-					<label class="form__line radio">
-						<input type="radio" name="interview">
-						<span class="radio__box"></span>
-						<span>Натуральный продукт</span>
-					</label>
-					<label class="form__line radio">
-						<input type="radio" name="interview">
-						<span class="radio__box"></span>
-						<span>Цена</span>
-					</label>
-					<label class="form__line radio">
-						<input type="radio" name="interview">
-						<span class="radio__box"></span>
-						<span>Наличие в магазине</span>
-					</label>
-					<label class="form__line radio">
-						<input type="radio" name="interview">
-						<span class="radio__box"></span>
-						<span>Ассортимент</span>
-					</label>
-					<button class="btn">Отправить</button>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
+			</section>
 		</div>
 	</div>
 
